ingressBasic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-root-ingress
  namespace: apps
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app-svc
                port:
                  number: 80
          - path: /app/hello
            pathType: Prefix
            backend:
              service:
                name: hellojava
                port:
                  number: 80
